# Cuda_cicd_test

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerignore  Linux.Dockerfile  Windows.Dockerfile  setup.py
.github/workflows/: Ubuntu.yml  ci.yml
cpp/: CMakeLists.txt
cpp/libs/xcuda/: CMakeLists.txt
cpp/libs/xcuda/src/: xcuda.cu  xcuda.cuh
cpp/src/: mathx.cpp  mathx.h
cpp/tests/: example_test.cpp  main.cpp
python/: CMakeLists.txt
python/src/: main.cpp
scripts/: install_build_environment_linux.sh  install_build_environment_windows.ps
test/: test.py
